<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"

            android:title="@string/nav_orders"
            android:checked="true" />
        <item
            android:id="@+id/nav_user_info"
            android:title="@string/nav_user_account"
            />
    </group>

    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback" />
            <item
                android:id="@+id/nav_ogout"
                android:icon="@android:drawable/ic_lock_idle_lock"
                android:title="@string/log_out"
                />
        </menu>
    </item>
</menu>